<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">Weather</string>
    <string name="menu_navigation_weather_today">Today</string>
    <string name="menu_navigation_weather_week">For 7 Days</string>
    <string name="menu_navigation_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="error_location_not_found">Sync failed: sorry, you should type your location on Settings page!</string>
    <string name="press_back_twice">Press back twice to exit!</string>
    <string name="message_list_empty">Oops… It seems that there aren\'t any forecast for your location or Internet connection is not established. Check the settings!</string>
    <string name="format_temp">Temperature: <xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>
    <string name="format_temp_short"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>
    <string name="format_wind">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g></string>
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1d</xliff:g> %%</string>
    <string name="date_format_today">Today, <xliff:g id="date">%1$s</xliff:g></string>
    <string name="relative_date_tomorrow">Tomorrow, <xliff:g id="date">%1$s</xliff:g></string>
    <string name="menu_navigation_weather_history">Weather history</string>
    <string name="logout">Logout</string>
</resources>
