<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.testapp.weather.util.ForecastUtils"/>

        <variable
            name="viewModel"
            type="com.testapp.weather.viewmodel.DayViewModel"/>
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:backgroundColorResId="@{ForecastUtils.getWeatherCondition(viewModel.forecast.weatherId).getColorResId}">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbar"
            android:orientation="vertical"
            android:paddingBottom="24dp"
            android:paddingTop="16dp"
            android:setVisibility="@{!viewModel.isEmptyMessageVisible}">

            <ImageView
                android:id="@+id/ivIcon"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:padding="4dp"
                android:scaleType="fitCenter"
                android:setImageResource="@{ForecastUtils.getWeatherCondition(viewModel.forecast.weatherId).getIconResId}"
                tools:src="@drawable/ic_weather_clear"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:gravity="center_horizontal"
                android:textSize="48sp"
                app:maxTemp='@{viewModel.forecast.maxTemp}'
                app:minTemp='@{viewModel.forecast.minTemp}'
                tools:text="+3\u00B0-1\u00B0"/>

            <View style="@style/divider_horizontal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="72dp"
                android:layout_marginTop="8dp"
                android:text='@{@string/format_pressure(viewModel.forecast.pressure)}'
                android:textSize="18sp"
                tools:text="@string/format_pressure"/>

            <View style="@style/divider_horizontal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="72dp"
                android:layout_marginTop="8dp"
                android:text='@{@string/format_humidity(viewModel.forecast.humidity)}'
                android:textSize="18sp"
                tools:text="@string/format_humidity"/>

            <View style="@style/divider_horizontal"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="72dp"
                android:layout_marginTop="8dp"
                android:text='@{@string/format_wind(viewModel.forecast.windSpeed, ForecastUtils.getWindDirection(viewModel.forecast.windDirection))}'
                android:textSize="18sp"
                tools:text="@string/format_wind"/>

            <View style="@style/divider_horizontal"/>


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbar"
            android:layout_gravity="center"
            android:gravity="center"
            android:setVisibility="@{viewModel.isEmptyMessageVisible}"
            android:text="@string/message_list_empty"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white"
            android:visibility="gone"/>

    </RelativeLayout>
</layout>